# rust_wgpu_first_attempt

./: .gitignore  Cargo.toml  README.md
run_wasm/: Cargo.toml
shader_viewer/: Cargo.toml
shader_viewer/src/: _main.rs  _shader.wgsl  camera.rs  main.rs  rotation.rs  shader.wgsl  texture.rs
