[package]
name = "shader_viewer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = "0.12"
winit = "0.26"
cgmath = "0.18"
env_logger = "0.9"
log = "0.4"
pollster = "0.2"
bytemuck = { version = "1.4", features = [ "derive" ] }
anyhow = "1.0"
instant = "0.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
console_log = "0.2.0"
web-sys = "0.3.56"
wasm-bindgen-futures = "0.4.29"

[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg"]
